version - 2.1 ..added custom scrollbar and fixed the api

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.fullBody{
+  height: calc(100vh - 62px);
+  overflow: scroll;
+}
